<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Medición</string>
    <string name="title">Medición Escolar</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="question">Pregunta 1</string>
    <string name="alt1s">A</string>
    <string name="alt2s">B</string>
    <string name="alt3s">C</string>
    <string name="alt4s">D</string>
    <string name="contentAlt">Alternativa</string>

    
    <item type="string" name="databaseVersion" format="integer">7</item>
    
    <string name="nombre_ets">Ingrese el nombre del alumno</string>
    <string name="comenzar_s">Comenzar</string>
    <string name="admin_s">Administrar</string>
    <string name="volvers">Aceptar</string>
    <string name="terminos">¡Felicitaciones!\nHas terminado la prueba</string>
    
</resources>