<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical" >

    <!-- Dummy item to prevent AutoCompleteTextView from receiving focus -->
	<LinearLayout
	    android:focusable="true" android:focusableInTouchMode="true"
	    android:layout_width="0px" android:layout_height="0px"/>
	

    
    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title"
        android:layout_marginBottom="20dp"
        android:textAppearance="?android:attr/textAppearanceLarge" />

   	<!-- :nextFocusUp and :nextFocusLeft have been set to the id of this component
     to prevent the dummy from receiving focus again -->
	<AutoCompleteTextView 
	    android:id="@+id/nombre_et"
	    android:layout_width="360dp" 
	    android:layout_height="wrap_content"
	    android:textSize="25sp"
	    android:nextFocusUp="@id/nombre_et" 
	    android:nextFocusLeft="@id/nombre_et"
	    android:ems="10"
	    android:imeOptions="actionDone"
        android:layout_marginBottom="20dp"
        android:inputType="textPersonName" 
        android:hint="@string/nombre_ets" 
	    />
    

    <Button
        android:id="@+id/comenzarb"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:textSize="20sp"
        android:text="@string/comenzar_s" />

    <Button
        android:id="@+id/adminb"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:layout_marginBottom="20dp"
        android:text="@string/admin_s" />

</LinearLayout>